<resources>
    <string name="app_name">LeanAndFitApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Home_fragment">Home Fragment</string>
    <string name="Workout_fragment">Workouts Fragment</string>
    <string name="Profile_fragment">Profile Fragment</string>
    <string name="home_top">Let\'s write your fitness journey</string>
    <string name="home_greeting">Hi Sofia! Today\'s a good day to workout.</string>
    <string name="home_lin_1">Finished Workouts</string>
    <string name="home_lin_2">Total time spent</string>
    <string name="testimonials">Testimonials</string>
    <string name="profile_ln_1">Age: 22 years</string>
    <string name="profile_ln_2">Email: sofiaandi@gmail.com</string>
    <string name="profile_ln_3">Password: xxxxxxxxxx</string>
    <string name="upgrade">Upgrade Your Plan</string>
</resources>