<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/top_background"
    tools:context=".profile">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginEnd="300dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/logo2" />

    </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="75dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="My Profile"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textColor="@color/black"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/profile_picture"
                    android:layout_gravity="center_vertical"/>

            </LinearLayout>

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Welcome Sofia Anderson !"
                android:textStyle="italic"
                android:textSize="18sp"
                android:fontFamily="sans-serif-black"
                android:textAlignment="center"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="175dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="20dp"
                    android:text="@string/profile_ln_1"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="20dp"/>

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="20dp"
                    android:text="@string/profile_ln_2"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="20dp"/>

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="20dp"
                    android:text="@string/profile_ln_3"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="20dp"/>

                <Button
                    android:layout_width="200dp"
                    android:layout_height="40dp"
                    android:background="@drawable/purple_button"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="20dp"
                    android:text="Change password"
                    android:textColor="@color/white"
                    />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/upgrade"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginStart="20dp"
                android:textColor="@color/black"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:src="@drawable/premium"/>
        </LinearLayout>

</FrameLayout>