<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/top_background"
    tools:context=".home">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/homeConstraint1"
        android:layout_width="match_parent"
        android:layout_height="141dp">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginEnd="300dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/textView3"
            app:layout_constraintHorizontal_bias="0.424"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/logo2" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="79dp"
            android:text="@string/home_top"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/imageView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="104dp"
            android:text="@string/home_greeting"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="140dp">
            <LinearLayout
                android:layout_width="320dp"
                android:layout_height="100dp"
                android:orientation="horizontal"
                android:background="@drawable/home_linear_back"
                android:layout_marginTop="10dp"
                android:padding="3dp"
                android:layout_gravity="center">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/home_lin_1"
                        android:textSize="20sp"
                        android:textStyle="italic"
                        android:textColor="@color/black"
                        android:fontFamily="sans-serif-black"
                        android:layout_marginLeft="20dp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="20dp"
                        android:text="14 workouts completed"
                        android:textColor="@color/black"
                        android:textSize="13sp" />
                </LinearLayout>
                <ImageView
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:padding="8dp"
                    android:src="@drawable/medal"
                    android:layout_marginLeft="10dp"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="320dp"
                android:layout_height="100dp"
                android:orientation="horizontal"
                android:background="@drawable/home_linear_back"
                android:layout_marginTop="10dp"
                android:padding="3dp"
                android:layout_gravity="center">

                <ImageView
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:padding="8dp"
                    android:src="@drawable/timer"
                    android:layout_marginLeft="8dp"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_marginLeft="20dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/home_lin_2"
                        android:textSize="20sp"
                        android:textStyle="italic"
                        android:textColor="@color/black"
                        android:fontFamily="sans-serif-black"
                        android:layout_marginLeft="20dp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="20dp"
                        android:text="9 hrs 54 mins"
                        android:textColor="@color/black"
                        android:textSize="13sp" />
                </LinearLayout>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/testimonials"
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    android:textStyle="italic"
                    android:fontFamily="sans-serif-black"
                    android:paddingTop="30dp"
                    android:paddingStart="20dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:layout_marginTop="0dp"
                    android:src="@drawable/test"/>
            </LinearLayout>


        </LinearLayout>

</FrameLayout>